# Lily-Engine-Utils

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  Makefile.am  Makefile.tools  README  README.org  SConstruct  SConstruct_noGraphics  config.bsh  configure.in  lilyutils-config  lilyutils.m4  suppressions.txt  waf  wscript
deprecated/: SConstruct  buildcommon.py
examples/autotools-project/: README.md  autogen.sh  configure.ac
examples/autotools-project/src/: Makefile.am  main.cpp
graphics/: SConstruct
graphics/include/lilyengine/: font.h  fontmanager.h  fontrenderer.h  glcontext.h  glcontext_generated.h  glutils.h  imagegl.h
graphics/src/: glutils.cpp
graphics/src/font/: builtinfont.tga  font.cpp  font_builtin2.cpp  fontrenderer.cpp
include/: derpcontext.h  image.h  malstring.h  mathdefs.h  refsystem.h  utils.h
include/lilyengine/: assetloader.h  cellarray.h  derpobject.h  expopsockets.h  image.h  matrix.h  pooledstring.h  preprocess.h  utils.h
libs/utils/: Doxyfile  everything.cpp  utils.h
oldbuild/: configure.ac
src/: TODO
src/assert/: malassert.cpp
src/assetloader/: assetloader.cpp  assetloader.h
src/compress/: _test.cpp  _test_compress.cpp
src/console/: _test.cpp  console.cpp
src/derpscript/: _test_derpscript.cpp  derpcontext.cpp  derperror.cpp  derperror_internal.h  derpexecnode.cpp  derpexecnode.h  derpexecnode_binarymath.cpp  derpexecnode_function.cpp  derpexecnode_internal.h  derpexecnode_loop.cpp  derpexecnode_unarymath.cpp  derplexer.cpp  derplexer.h  derpobject.cpp  derpparser.cpp  derpparser.h  derpparser_block.cpp  derpparser_debug.cpp  derpparser_expression.cpp  derpparser_function.cpp  derpparser_functioncall.cpp  derpparser_ifelse.cpp  derpparser_index.cpp  derpparser_internal.h  derpparser_loops.cpp  derpparser_statement.cpp  derpparser_value.cpp  derpparser_variabledec.cpp  derpvm.cpp  derpvm_builtinfunctions.cpp  derpvm_builtinfunctions.h
src/filesystem/: filesystem.cpp  filesystem.h
src/image/: image.cpp  imagedxt.cpp
src/parser/: _test_parser.cpp  parser.cpp  parserxml.cpp
src/preprocess/: preprocess.cpp
src/sockets/: sockets.cpp
src/string/: pooledstring.cpp
src/thread/: thread.cpp
tests/: normal_file.txt
tests/fuzzing/: afl_prepare_tests.bsh  afl_redo_tests.bsh  afl_run_tests.bsh  afl_save_crashes.bsh  compile_with_afl.bsh
tools/: BuildToolsAndRunTests.bsh  CleanTests.bsh  SConstruct
tools/archiver/: README.txt  archiver.cpp  usagetext.h
tools/buffergen/: README.txt  buffergen.cpp  usagetext.h
tools/derpscript/: derp.cpp  test.derp
tools/glcontextcode/: FIXME  README  glfuncs.txt  mkglcontextcode.cpp
tools/headerfixer/: README.txt  generateheader.bsh  headerfixer.cpp  mainheader.h  mainheader.txt  usagetext.h
tools/imgbuffer/: README.txt  imgbuffer.cpp  usagetext.h
tools/lilylibtests/: README.txt  lilylibtests.cpp  usagetext.h
tools/spritefucker/: spritefucker.cpp  usagetext.h
tools/todoscan/: README.txt  commentblock.cpp  common.h  orgmodestuff.cpp  orgmodestuff.h  todoscan.cpp  usagetext.h
utils/: CMakeLists.txt  README  SConstruct
utils/include/lilyengine/: angle.h  archive.h  assetloader.h  assetmanager.h  base64.h  cellarray.h  compress.h  config.h  console.h  cryptorc4.h  derpconfig.h  derpcontext.h  derperror.h  derpobject.h  derpvm.h  expopsockets.h  filesystem.h  hashtable.h  http.h  image.h  lilyparser.h  lilyparserjson.h  lilyparserxml.h  malassert.h  malstring.h  mathdefs.h  matrix.h  params.h  params_advanced.h  pooledstring.h  preprocess.h  refsystem.h  simplebuffer.h  testing.h  thread.h  utils.h  winhacks.h
utils/include/lilyengine/deflate/: deflate.h  deflate_bitstream.h  deflate_common.h  deflate_huffmannode.h  deflate_streambuf.h  deflate_zlib.h  zipfile.h
utils/include/lilyengine/graphicalconsole/: graphicalconsole.h  graphicalconsole_autocomplete.h  graphicalconsole_builtincommands.h  graphicalconsole_common.h  graphicalconsole_entries.h  graphicalconsole_fontimage.h  graphicalconsole_gfx.h  graphicalconsole_globalcvars.h  graphicalconsole_sdlgl.h  graphicalconsole_sdlinput.h  graphicalconsole_sdlrenderer.h  graphicalconsole_sdlsoftware.h  graphicalconsole_stream.h  graphicalconsole_textediting.h  graphicalconsole_typedescriptions.h  textrendering.h
utils/include/lilyengine/graphicalconsole/fontembedtool/: Makefile  bitmapfont2.tga  bitmapfont6.xcf  fontembedtool.cpp  graphicalconsole_fontimage_template.h
utils/include/lilyengine/pixelimage/: pixelimage.h  pixelimage_blit.h  pixelimage_legacy.h  pixelimage_scale.h  pixelimage_stb.h  pixelimage_tga.h  pixelimagebase.h  pixelvalue.h
utils/include/lilyengine/streams/: owningstream.h  streamsection.h
utils/src/: everything.cpp
utils/src/assert/: malassert.cpp
utils/src/assetloader/: assetloader.cpp
utils/src/compress/: _test_compress.cpp  compress.cpp
utils/src/console/: console.cpp
utils/src/crypto/: cryptorc4.cpp
utils/src/derpscript/: TODO.org  derpcontext.cpp  derperror.cpp  derperror_internal.h  derpexecnode.cpp  derpexecnode.h  derpexecnode_binarymath.cpp  derpexecnode_function.cpp  derpexecnode_internal.h  derpexecnode_loop.cpp  derpexecnode_unarymath.cpp  derplexer.cpp  derplexer.h  derpobject.cpp  derpparser.h  derpparser_block.cpp  derpparser_expression.cpp  derpparser_functioncall.cpp  derpparser_ifelse.cpp  derpparser_index.cpp  derpparser_internal.h  derpparser_loops.cpp  derpparser_statement.cpp  derpparser_value.cpp  derpparser_variabledec.cpp  derpvm.cpp  derpvm_builtinfunctions.cpp
utils/src/filesystem/: _test_filesystem.cpp  archive.cpp  filesystem.cpp
utils/src/image/: image.cpp  imagedxt.cpp
utils/src/math/: angle.cpp  matrix.cpp
utils/src/params/: params.cpp
utils/src/parser/: _test_parser.cpp  parser.cpp  parserjson.cpp  parserjsonmacros.h  parserxml.cpp
utils/src/preprocess/: preprocess.cpp
utils/src/refsystem/: refsystem.cpp
utils/src/sockets/: _test_sockets.cpp  sockets.cpp
utils/src/string/: base64.cpp  pooledstring.cpp  simplebuffer.cpp  string.cpp
utils/src/thread/: _test_thread.cpp  thread.cpp
(+58 files in other folders)
