AC_INIT(LilyEngineUtils, 1.2)

dnl AC_PROG_LIBTOOL
AC_PROG_RANLIB
dnl AC_CONFIG_HEADER([config.h])
dnl AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION)

case "$host" in
    *mingw*)
        AM_LDFLAGS="$AM_LDFLAGS -lwsock32"
        EXTRA_LDADD="-lwsock32"
        ;;
    *)
        AM_LDFLAGS="$AM_LDFLAGS -pthread"
        ;;
esac

dnl CXXFLAGS="$CXXFLAGS -Wall"
dnl LDFLAGS="$LDFLAGS"

dnl AC_DEFINE_UNQUOTED([FOOBAR], ["$FOOBAR"], [Some junk for the build.])
dnl AC_DEFINE_UNQUOTED([DATADIR], [$datadir], [Data directory.])

AM_CXXFLAGS="-Wall"

AC_SUBST(AM_CXXFLAGS)
AC_SUBST(AM_LDFLAGS)
AC_SUBST(EXTRA_LDADD)

AC_PROG_CXX

AC_OUTPUT(
    Makefile)
