AC_INIT(LilyEngineUtils, 1.2)

AC_PROG_RANLIB

AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION)

case "$host" in
    *mingw*)
        AM_LDFLAGS="$AM_LDFLAGS -lwsock32"
        EXTRA_LDADD="-lwsock32"
        ;;
    *)
        AM_LDFLAGS="$AM_LDFLAGS -pthread"
        ;;
esac

AM_CXXFLAGS="-Wall"

AC_SUBST(AM_CXXFLAGS)
AC_SUBST(AM_LDFLAGS)
AC_SUBST(EXTRA_LDADD)

AC_PROG_CXX

AC_OUTPUT(Makefile)

