AC_INIT(Butts, 1.0)
AC_PROG_CXX
AM_INIT_AUTOMAKE(foreign)

dnl ----------------------------------------------------------------------
dnl Include the Lily-Engine-Utils m4 file straight from the
dnl Lily-Engine-Utils directory.
m4_include(../../lilyutils.m4)
dnl ----------------------------------------------------------------------

AC_OUTPUT([Makefile src/Makefile])

