# Simple test program.
bin_PROGRAMS = test
test_SOURCES = main.cpp
test_LDFLAGS=-static

# ----------------------------------------------------------------------
# Add Lily-Engine-Utils libs and flags in.
test_CXXFLAGS=$(LILY_CXXFLAGS)
test_LDADD=$(LILY_LIBS)
# ----------------------------------------------------------------------
